crates/schema/tests/compile_fail/derive_emit_as_key_collision.stderr
error: emit_as key `target` collides with a canonical field key — two fields would emit under the same output key
 --> tests/compile_fail/derive_emit_as_key_collision.rs:9:5
  |
9 |     source: String,
  |     ^^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_emit_as_key_collision.rs:14:18
   |
 7 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
14 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
